about, help page configuration

--- a/web-server/views/help.hbs
+++ b/web-server/views/help.hbs
@@ -7,8 +7,10 @@
 </head>
 
 <body>
-    <h1>About</h1>
-    <img src="img/robot.png">
+    <h1>{{title}}</h1>
+    <p>
+        {{message}}
+    </p>
 </body>
 
 </html>
