--- a/web-server/views/about.hbs
+++ b/web-server/views/about.hbs
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-    <h1>Help</h1>
+    <h1>{{title}}</h1>
+    <img src="img/robot.png">
+    <p>Created by {{name}}</p>
 </body>
 
 </html>
