--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-    <h1>{{title}}</h1>
+    {{>header}}
+
     <p>
         {{message}}
     </p>
+    {{>footer}}
 </body>
 
 </html>
