--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-    <h1>{{title}}</h1>
+    {{>header}}
     <img src="img/robot.png">
-    <p>Created by {{name}}</p>
+    {{>footer}}
 </body>
 
 </html>
