--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Taewoo Han. It uses data from mapbox.com and weatherstack.com</p>
         <img class="portrait" src="img/robot.png">
     </div>
     {{>footer}}
